--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,10 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^8.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
